# insurance-mrm

./: README.md  pyproject.toml
notebooks/: demo_insurance_mrm.py  run_demo.py  run_tests.py
src/insurance_mrm/: __init__.py  inventory.py  model_card.py  report.py  scorer.py
tests/: test_inventory.py  test_model_card.py  test_report.py  test_scorer.py
