[project]
name = "insurance-mrm"
version = "0.1.0"
description = "Model risk management framework for insurance pricing models"
readme = "README.md"
authors = [
    { name = "Ralph", email = "pricing.frontier@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_mrm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
